# pdf-merge-tool

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/: main.py  pdf_merge.py  pdf_preview.py
